# BookPlay

./: CMakeLists.txt  README.md  book_play.c  floppysounds.h  tusb_config.h
floppysounds/: floppy00.h  floppy01.h  floppy02.h  floppy03.h  floppy04.h  floppy05.h  floppy06.h  floppy07.h  floppy08.h  floppy09.h  floppy10.h  floppy11.h  floppy12.h  floppy13.h  floppy14.h  floppy15.h  floppy16.h
refs/: hello_7segment.c  hid_app.c  main.c
